[package]
autoexamples = false
edition = "2021"
name = "flux-playground"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1.3"
axum = "0.6.2"
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tower-http = { version = "0.3.5", features = ["cors", "fs"] }

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "process", "io-util"]
version = "1.24.1"
